--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>JS Overlay Menu Project</title>
-    <link rel="stylesheet" src="css/style.css">
+    <link rel="stylesheet" src="style.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
   </head>
   <body>
@@ -41,6 +41,6 @@
         
       </div>
 
-    <script src="Udemy JS/Section 10/Project/js/myscript.js"></script>
+    <script src="myscript.js"></script>
   </body>
 </html>
