--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>JS Overlay Menu Project</title>
-    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
   </head>
   <body>
@@ -49,6 +49,6 @@
         
       </div>
 
-    <script src="js/myscript.js"></script>
+    <script src="myscript.js"></script>
   </body>
 </html>
